Front de crear usuario hecho

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -35,8 +35,8 @@
       </button>
     </mat-sidenav>
   
-    <mat-sidenav-content>
-      <div class="content mat-elevation-z8">
+    <mat-sidenav-content >
+      <div class="content mat-elevation-z8" style="display: inherit;">
         <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
