--- a/src/app/user-create/user-create.component.html
+++ b/src/app/user-create/user-create.component.html
@@ -1,43 +1,68 @@
-<h2>Formulario de Creación de Usuario</h2>
-<form action="#" method="post" class="user-form" >
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" name="nombre" required><br>
+<h2>Crear Usuario</h2>
+<form action="#" method="post" class="user-form" >   
+    <div class="form-header">
+        <h1>Datos personales</h1>
+        <div class="form-group">
+            <div>
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre"><br> 
+            </div>
+            <div>
+                <label for="apellido1">Primer Apellido:</label>
+                <input type="text" id="apellido1" name="apellido1" required><br> 
+            </div>
+            <div>
+                <label for="apellido2">Segundo Apellido:</label>
+                <input type="text" id="apellido2" name="apellido2"><br> 
+            </div>
+            <div>
+                <label for="dni">DNI:</label>
+                <input type="text" id="dni" name="dni" required><br> 
+            </div>
+            <div>
+                <label for="cuenta">Número de Cuenta:</label>
+                <input type="text" id="cuenta" name="cuenta"><br> 
+            </div>      
+        </div>                              
+    </div>
+    <div class="form-header">
+        <h1>Dirección</h1>
+        <div class="form-group">                   
+            <div>
+                <label for="localidad">Localidad:</label>
+                <input type="text" id="localidad" name="localidad" required><br>
+    
+                <label for="provincia">Provincia:</label>
+                <input type="text" id="provincia" name="provincia"><br>
+    
+                <label for="comunidad">Comunidad:</label>
+                <input type="text" id="comunidad" name="comunidad" required><br>
+               
+                <label for="direccion">Dirección:</label>
+                <input type="text" iD="direccion" name="direccion" required><br>
+    
+                <label for="codigo_postal">Código postal:</label>
+                <input type="text" id="codigo_postal" name="codigo_postal"><br>
+            </div>       
+        </div>
+    </div>   
+    <div class="form-header">
+        <h1>Usuario</h1> 
+        <div class="form-group">                  
+            <div>
+                <label for="correo-electronico">Correo electrónico:</label>
+                <input type="text" id="correo-electronico" name="correo-electronico" required><br>
+    
+                <label for="provincia">Usuario:</label>
+                <input type="text" id="provincia" name="provincia"><br>
+    
+                <label for="contrasena">Contraseña:</label>
+                <input type="password" id="contrasena" name="contrasena"><br>
+            </div>      
+        </div>
+    </div>
 
-    <label for="apellido1">Apellido Paterno:</label>
-    <input type="text" id="apellido1" name="apellido1" required><br>
+    <button mat-raised-button class="create-button">Crear</button>
+    <button mat-raised-button class="cancel-button">Cancelar</button>
 
-    <label for="apellido2">Apellido Materno:</label>
-    <input type="text" id="apellido2" name="apellido2"><br>
-
-    <label for="dni">DNI:</label>
-    <input type="text" id="dni" name="dni" required><br>
-
-    <label for="email">Correo Electrónico:</label>
-    <input type="email" id="email" name="email" required><br>
-
-    <label for="telefono">Teléfono:</label>
-    <input type="tel" id="telefono" name="telefono"><br>
-
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion"><br>
-
-    <label for="localidad">Localidad:</label>
-    <input type="text" id="localidad" name="localidad"><br>
-
-    <label for="provincia">Provincia:</label>
-    <input type="text" id="provincia" name="provincia"><br>
-
-    <label for="codigo_postal">Código Postal:</label>
-    <input type="text" id="codigo_postal" name="codigo_postal"><br>
-
-    <label for="cuenta">Número de Cuenta:</label>
-    <input type="text" id="cuenta" name="cuenta"><br>
-
-    <label for="usuario">Usuario:</label>
-    <input type="text" id="usuario" name="usuario" required><br>
-
-    <label for="contrasena">Contraseña:</label>
-    <input type="password" id="contrasena" name="contrasena" required><br>
-
-    <input type="submit" value="Crear Usuario">
 </form>
