--- a/src/app/user-create/user-create.component.scss
+++ b/src/app/user-create/user-create.component.scss
@@ -1,16 +1,21 @@
 .user-form {
   height: calc(100% - 32px); 
   overflow-y: auto;
-  display: flex;
   padding: 20px;
   border-radius: 10px;
-  background-color: rgb(250, 218, 192);
+  background-color: rgb(238, 238, 237);
+}
+
+.flex{
+  display: flex;
+  width: fit-content;
+  height: fit-content;
 }
 
 h2 {
   text-align: center;
   color: black;
-  background-color: #917551;
+  background-color: #0770fa;
   border-radius: 10px;
   margin: unset;
   width: 100%;
@@ -19,12 +24,12 @@ h2 {
 .form-header{
   padding: 15px;
   margin-top: 10px;
-  border: 1px solid #333;
+  border: 2px solid #0770fa;
   border-radius: 10px;
   width: fit-content;
   height: fit-content;
   margin-bottom: 10px;
-  margin-right: 90px;
+  margin-right: 70px;
 }
 
 h1 {
@@ -32,24 +37,13 @@ h1 {
   color: black;
   margin: unset;
   margin-top: -30px;
-  background-color: rgb(250, 218, 192);
+  background-color: rgb(238, 238, 237);
   width: fit-content;
   margin-bottom: 10px;
 }
 
 .form-group {
   flex-direction: column;
-  //padding: 15px;
-  //margin-top: 10px;
-  //border: 1px solid #333;
-  //border-radius: 10px;
-  //flex-wrap: wrap;
-  //flex-direction: column;
-  //justify-content: space-between;
-  //margin-right: 40px;
-  //margin-left: 40px;
-  //height: 22vh;
-  //flex: 1 1 auto;
 }
 
 .user-form label {
@@ -69,56 +63,84 @@ h1 {
   justify-self: end;
 }
 
+.user-form select {
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+  width: 100%; 
+  justify-self: end;
+  margin-bottom: 13px;
+}
+
+.div-buttons{
+  position: absolute;
+  left: 80%;
+  width: fit-content
+  height fit-content;
+}
+
 .create-button{
   width: 100px;
-  background-color: #1ea304;
+  background-color: #0770fa;
   color: white;
+  margin-top: 15px;
+  margin-right: 10px;
 }
 
 .cancel-button{
   width: 100px;
   background-color: red;
   color: black;
+  margin-top: 15px;
 }
 
 @media only screen and (max-width: 1200px) {
-  .user-form{
-    flex-direction: column;
-    align-items: left;
-  }
+    .user-form{
+      flex-direction: column;
+      align-items: left;
+    }
 
-  .form-header{
-    width: 100%;
-  }
+    .flex{
+      flex-direction: column;
+      align-items: left;
+      width: 100%;
+    }
 
-  .form-group {
-    flex-direction: column;
-    margin-right: 0;
-    margin-left: 0;
-  }
+    .form-header{
+      width: 100%;
+    }
 
-  .user-form input {
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 0.8rem;
-    margin-bottom: 10px;
-    width: 100%; 
-  }
+    .form-group {
+      flex-direction: column;
+      margin-right: 0;
+      margin-left: 0;
+      width: 100%;
+    }
 
-  .create-button{
-    background-color: #1ea304;
-    color: white;
-    height: 150px;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  
-  .cancel-button{
-    background-color: red;
-    color: black;
-    height: 150px;
-    width: 100%;
-  }
-  
+    .user-form input {
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+      width: 100%; 
+    }
+
+    .div-buttons{
+      width: fit-content;
+      height: fit-content;
+      position: inherit;
+    }
+
+    .create-button{
+      background-color: #0770fa;
+      color: white;
+    }
+    
+    .cancel-button{
+      background-color: red;
+      color: black;
+    }  
 }
