Cambios hasta ahora

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
       </mat-menu>
       <mat-menu #finca="matMenu">
         <button mat-menu-item routerLink="/dashboard/finca-create">Crear Finca</button>
-        <button mat-menu-item>Añadir parcela</button>
+        <button mat-menu-item routerLink="/dashboard/parcela-create">Añadir parcela</button>
         <button mat-menu-item>Listar parcelas</button>
         <button mat-menu-item>Listar propietarios</button>
       </mat-menu>
