--- a/src/app/finca-create/finca-create.component.html
+++ b/src/app/finca-create/finca-create.component.html
@@ -1,17 +1,62 @@
 <h2>Crear Finca</h2>
 <form action="#" method="post" class="user-form">
-    <div class="fields">
-        <div class="div-input">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre"><br>
-        </div>       
-        <div class="div-input">
-            <label for="onzas">Onzas:</label>
-            <input type="number" id="onzas" name="onzas"><br>
+    <div style="display: block; width: 100%;">
+        <div class="flex">
+            <div class="form-header">
+                <h1>Datos</h1>
+                <div class="form-group">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+    
+                    <label for="onzas">Onzas:</label>
+                    <input type="number" id="onzas" name="onzas" required>  
+                </div>        
+            </div>
+            <div class="form-header">
+                <h1>Ubicación</h1>
+                <div class="form-group">
+                    <label for="localidad">Localidad:</label>
+                    <select id="localidad" name="localidad" required></select>               
+    
+                    <label for="provincia">Provincia:</label>
+                    <select id="provincia" name="provincia" required></select>
+    
+                    <label for="comunidad">Comunidad:</label>
+                    <select id="comunidad" name="comunidad" required></select>
+                </div>
+            </div>
         </div>
-        <div class="div-buttons">
-            <button mat-raised-button class="create-button">Crear</button>
-            <button mat-raised-button class="cancel-button" routerLink="/dashboard">Cancelar</button>
-        </div>        
+    
+        <div style="display: flex; width: fit-content; height: fit-content; margin-bottom: 20px; margin-top: 30px;">
+            <label style="font-size: 0.9rem; font-weight: bold; margin-top: -4px; margin-left: 15px;" for="tipoParcela">Introduzca el número de propietarios:</label>
+            <input style="margin-left: 15px; margin-right: 15px; width: 45%;" name="input-propietarios" min="0" type="number" id="numPropietarios" [(ngModel)]="numeroPropietarios" (change)="generarFormularioPropietarios()" required>
+        </div>
+        <form [formGroup]="propietariosForm">
+            <div formArrayName="propietarios">
+                <div *ngFor="let row of propietarioRows; let rowIndex = index" class="propietarios" style="display: flex; width: 100%;">
+                    <div *ngFor="let propietario of row; let i = index" [formGroupName]="rowIndex * 3 + i" class="propietario" style="padding: 10px;">
+                        <div class="form-header">
+                            <h1>Usuario {{ rowIndex * 3 + i + 1 }}</h1>
+                            <div class="form-group">
+                                <label for="usuario{{ rowIndex * 3 + i }}">Usuario:</label>
+                                <select id="usuario{{ rowIndex * 3 + i }}" formControlName="usuario" name="usuario{{ rowIndex * 3 + i }}"></select>
+                
+                                <label for="participacion{{ rowIndex * 3 + i }}">Participación (%):</label>
+                                <input type="number" id="participacion{{ rowIndex * 3 + i }}" formControlName="participacion" name="participacion{{ rowIndex * 3 + i }}" min="0" max="100">
+                
+                                <section class="rol">
+                                    <mat-checkbox formControlName="administrador" class="check" id="administrador{{ rowIndex * 3 + i }}">Administrador</mat-checkbox>
+                                    <mat-checkbox formControlName="propietario" class="check" id="propietario{{ rowIndex * 3 + i }}">Propietario</mat-checkbox>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>                       
+    </div>
+    <div class="div-buttons">
+        <button mat-raised-button class="create-button">Crear</button>
+        <button mat-raised-button class="cancel-button" routerLink="/dashboard">Cancelar</button>
     </div>
 </form>
