--- a/src/app/parcela-create/parcela-create.component.scss
+++ b/src/app/parcela-create/parcela-create.component.scss
@@ -1,42 +1,42 @@
 .user-form {
     height: calc(100% - 32px); 
+    overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
     background-color: rgb(238, 238, 237);
-    overflow-y: auto;
     display: flex;
 }
 
-.propietarios{
-  display: flex;
-  width: fit-content;
-  margin-bottom: 20px;
+.propietario-row{
+    display: flex;
+    width: fit-content;
+    margin-bottom: 20px;
 }
 
 .propietario {
-  margin: 0 10px;
-  width: fit-content;
-  box-sizing: border-box;
+    margin: 0 10px;
+    width: fit-content;
+    box-sizing: border-box;
 }
 
-// .propietario:last-child {
-//   width: fit-content;
-//   margin-right: 0;
-// }
+.propietario:last-child {
+    width: fit-content;
+    margin-right: 0;
+}
+
+h2 {
+    text-align: center;
+    color: white;
+    background-color: #0770fa;
+    border-radius: 10px;
+    margin: unset;
+    width: 100%;
+}
 
 .flex{
     display: flex;
     width: 100%;
     height: fit-content;
-}
-
-h2 {
-    text-align: center;
-    color: black;
-    background-color: #0770fa;
-    border-radius: 10px;
-    margin: unset;
-    width: 100%;
 }
 
 .form-header{
@@ -47,7 +47,7 @@ h2 {
     width: fit-content;
     height: fit-content;
     margin-bottom: 10px;
-    margin-right: 70px;
+    margin-right: 50px;
 }
 
 h1 {
@@ -63,8 +63,6 @@ h1 {
 .form-group {
     flex-direction: column;
 }
-
-
 
 .user-form label {
     font-size: 0.8rem;
@@ -96,13 +94,13 @@ h1 {
 .div-buttons{
     width: fit-content;
     display: flex;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: auto;
 }
 
 .create-button{
     width: 100px;
-    background-color: #0770fa;
+    background-color: #2bea04;
     color: white;
 }
   
@@ -114,39 +112,96 @@ h1 {
     margin-right: 10px;
 }
 
-@media only screen and (max-width: 1340px) {
-  .user-form{
+.subparcela{
+    padding: 15px;
+    margin-top: 10px;
+    border: 1px solid #00060c;
+    border-radius: 10px;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
+h3{
+    font-size: 10;
+    color: black;
+    margin: unset;
+    margin-top: -30px;
+    background-color: rgb(238, 238, 237);
+    width: fit-content;
+    margin-bottom: 10px;
+}
+
+.form-sub{
+    display: flex;
+}
+
+.select-sub{
+    margin-left: 15px; 
+    margin-right: 15px;
+}
+
+.input-sub{
+    margin-left: 15px; 
+    margin-right: 15px;
+}
+
+@media only screen and (max-width: 1300px) {
+    .user-form{
       flex-direction: column;
       align-items: left;
     }
 
+    .propietarios-container {
+        flex-direction: column;
+        align-items: left;
+        width: 100%;
+    }
+    
+    .propietario-row{
+        flex-direction: column;
+        align-items: left;
+        width: 100%;
+    }
+    
+    .propietario {
+        width: 100%;
+    }
+    
+    .propietario:last-child {
+         width: 100%;
+    }
+  
     .flex{
       flex-direction: column;
       align-items: left;
       width: 100%;
     }
-
-    .propietarios{
-      flex-direction: column;
-      align-items: left;
-      width: 100%;
-    }
-    
-    .propietario {
-      width: 100%;
-    }
-
+  
     .form-header{
       width: 100%;
     }
-
+  
     .form-group {
       flex-direction: column;
       margin-right: 0;
       margin-left: 0;
       width: 100%;
+      margin: inherit;
     }
 
+    .subparcela{
+        width: 100%;
+    }
+
+    .form-sub{
+      flex-direction: column;
+      margin-right: 0;
+      margin-left: 0;
+      width: 100%;
+    }
+  
     .user-form input {
       padding: 8px;
       border-radius: 5px;
@@ -156,12 +211,41 @@ h1 {
       width: 100%; 
     }
 
+    .user-form select {
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+      width: 100%;
+    }
+
+    .input-sub{
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+      width: 100%;
+      margin: inherit;
+    }
+
+    .select-sub{
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+      width: 100%;
+      margin: inherit;
+    }
+  
     .div-buttons{
       width: fit-content;
       height: fit-content;
       margin: inherit;
     }
-
+  
     .create-button{
       background-color: #0770fa;
       color: white;
@@ -170,5 +254,5 @@ h1 {
     .cancel-button{
       background-color: red;
       color: black;
-    }
-}
+    }  
+  }
