--- a/src/app/user-create/user-create.component.scss
+++ b/src/app/user-create/user-create.component.scss
@@ -75,10 +75,9 @@ h1 {
 }
 
 .div-buttons{
-  position: absolute;
-  left: 80%;
   width: fit-content
   height fit-content;
+  display: flex;
 }
 
 .create-button{
@@ -96,51 +95,50 @@ h1 {
   margin-top: 15px;
 }
 
-@media only screen and (max-width: 1200px) {
-    .user-form{
-      flex-direction: column;
-      align-items: left;
-    }
+@media only screen and (max-width: 1543px) {
+  .user-form{
+    flex-direction: column;
+    align-items: left;
+  }
 
-    .flex{
-      flex-direction: column;
-      align-items: left;
-      width: 100%;
-    }
+  .flex{
+    flex-direction: column;
+    align-items: left;
+    width: 100%;
+  }
 
-    .form-header{
-      width: 100%;
-    }
+  .form-header{
+    width: 100%;
+  }
 
-    .form-group {
-      flex-direction: column;
-      margin-right: 0;
-      margin-left: 0;
-      width: 100%;
-    }
+  .form-group {
+    flex-direction: column;
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+  }
 
-    .user-form input {
-      padding: 8px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 0.8rem;
-      margin-bottom: 10px;
-      width: 100%; 
-    }
+  .user-form input {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+    width: 100%; 
+  }
 
-    .div-buttons{
-      width: fit-content;
-      height: fit-content;
-      position: inherit;
-    }
+  .div-buttons{
+    width: fit-content;
+    height: fit-content;
+  }
 
-    .create-button{
-      background-color: #0770fa;
-      color: white;
-    }
-    
-    .cancel-button{
-      background-color: red;
-      color: black;
-    }  
+  .create-button{
+    background-color: #0770fa;
+    color: white;
+  }
+  
+  .cancel-button{
+    background-color: red;
+    color: black;
+  }  
 }
