--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,27 +1,16 @@
-<mat-sidenav-container class="example-container"> 
-    <mat-sidenav-content>
-      <div class="col-md-6 offset-md-3">
-        <div class="content mat-elevation-z8 justify-content-center">
-          <div class="login-form">
-            <img class="avatar logo mat-elevation-z8 mt-5"src="https://startupeable.com/directorio/wp-content/uploads/listing-uploads/logo/2021/10/AgroPro-logo.png" alt="">
-            <div class="mt-2">
-              <label for="email" class="mt-5 d-flex justify-content-center">             
-                Email
-              </label>
-              <input type="email" class="form-control mt-2" placeholder="ejemplo@gmail.com">
-            </div>
-            <div class="mt-2">
-              <label for="email" class="mt-5 d-flex justify-content-center">             
-                Contraseña
-              </label>
-              <input type="password" class="form-control mt-2">
-            </div>
-            <div class="col-md-12 d-flex justify-content-center mt-5">
-              <button type="button" (click)="login()" class="btn btn-primary">Login</button>
-            </div>
-          </div>
-        </div>
+<div class="login-container">
+  <div class="login-content mat-elevation-z8">
+    <div class="login-form">
+      <img class="avatar logo mat-elevation-z8" src="https://startupeable.com/directorio/wp-content/uploads/listing-uploads/logo/2021/10/AgroPro-logo.png" alt="">
+      <div class="input-group">
+        <label for="username">Usuario</label>
+        <input type="username" id="username" class="form-control">
       </div>
-    </mat-sidenav-content>
-  
-</mat-sidenav-container>
+      <div class="input-group">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" class="form-control">
+      </div>
+      <button type="button" (click)="login()" class="btn btn-primary">Login</button>
+    </div>
+  </div>
+</div>
